feat: add real-time progressive summaries to all workflow actions

--- a/.github/actions/common/steps/build-project/action.yml
+++ b/.github/actions/common/steps/build-project/action.yml
@@ -15,7 +15,25 @@ runs:
   steps:
     - name: Build project
       shell: bash
-      run: ${{ inputs.build-command }}
+      run: |
+        echo "🏗️ **Building project** (\`${{ inputs.build-command }}\`)" >> $GITHUB_STEP_SUMMARY
+        echo "- Environment: \`${{ inputs.environment }}\`" >> $GITHUB_STEP_SUMMARY
+        echo "- Started: $(date)" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        
+        # Run the build command
+        if ${{ inputs.build-command }}; then
+          echo "✅ **Build completed successfully**" >> $GITHUB_STEP_SUMMARY
+          echo "- Finished: $(date)" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "❌ **Build failed**" >> $GITHUB_STEP_SUMMARY
+          echo "- Command: \`${{ inputs.build-command }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- Environment: \`${{ inputs.environment }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- Failed at: $(date)" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          exit 1
+        fi
       env:
         NODE_ENV: ${{ inputs.environment }}
 
