--- a/.github/actions/npm/jobs/publish-github-packages/action.yml
+++ b/.github/actions/npm/jobs/publish-github-packages/action.yml
@@ -31,6 +31,13 @@ outputs:
 runs:
   using: composite
   steps:
+    - name: Update Summary - GitHub Packages Start
+      shell: bash
+      run: |
+        echo "## 📦 GitHub Packages Publishing Progress" >> $GITHUB_STEP_SUMMARY
+        echo "- 🔄 Starting GitHub Packages publication for ${{ inputs.package-name }}@${{ inputs.version }}" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+
     - name: Publish package to GitHub Packages
       id: publish-package
       uses: CLDMV/.github/.github/actions/npm/steps/publish-package@v1
@@ -43,3 +50,15 @@ runs:
         package-manager: ${{ inputs.package-manager }}
         publish-command: ${{ inputs.publish-command }}
         auth-token: ${{ inputs.github-token }}
+
+    - name: Update Summary - GitHub Packages Success
+      if: steps.publish-package.outputs.published == 'true'
+      shell: bash
+      run: |
+        echo "- ✅ GitHub Packages: Published ${{ inputs.package-name }}@${{ inputs.version }} successfully" >> $GITHUB_STEP_SUMMARY
+
+    - name: Update Summary - GitHub Packages Failure
+      if: steps.publish-package.outputs.published != 'true'
+      shell: bash
+      run: |
+        echo "- ❌ GitHub Packages: Publication failed for ${{ inputs.package-name }}@${{ inputs.version }}" >> $GITHUB_STEP_SUMMARY
