--- a/.github/workflows/ci-jobs.yml
+++ b/.github/workflows/ci-jobs.yml
@@ -416,7 +416,7 @@ jobs:
     name: "📋 Create GitHub Release"
     if: inputs.run_create_release == true
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: [build-and-test, detect-release]
     outputs:
       release-id: ${{ steps.create.outputs.release-id }}
     steps:
@@ -434,7 +434,7 @@ jobs:
         id: create
         uses: CLDMV/.github/.github/actions/github/jobs/create-release@v1
         with:
-          version: ${{ inputs.version }}
+          version: ${{ needs.detect-release.outputs.version || inputs.version }}
           package-name: ${{ inputs.package_name }}
           is-prerelease: ${{ inputs.is_prerelease }}
           package-manager: ${{ inputs.package_manager }}
@@ -469,20 +469,30 @@ jobs:
     outputs:
       published: ${{ steps.publish.outputs.published }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Extract and validate version
+        id: extract-version
+        uses: ./.github/actions/npm/steps/extract-version
+        with:
+          package-name: ${{ inputs.package_name }}
+          version-override: ${{ inputs.version }}
+
       - name: Calculate artifact names
         id: names
         uses: CLDMV/.github/.github/actions/common/steps/calculate-names@v1
         with:
           node-version: ${{ inputs.node_version }}
           package-name: ${{ inputs.package_name }}
-          version: ${{ inputs.version }}
+          version: ${{ steps.extract-version.outputs.version }}
 
       - name: Publish to NPM
         id: publish
         uses: CLDMV/.github/.github/actions/npm/jobs/publish-npm@v1
         with:
           package-name: ${{ inputs.package_name }}
-          version: ${{ inputs.version }}
+          version: ${{ steps.extract-version.outputs.version }}
           node-version: ${{ inputs.node_version }}
           package-manager: ${{ inputs.package_manager }}
           publish-command: ${{ inputs.publish_command_npm }}
@@ -497,20 +507,30 @@ jobs:
     outputs:
       published: ${{ steps.publish.outputs.published }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Extract and validate version
+        id: extract-version
+        uses: ./.github/actions/npm/steps/extract-version
+        with:
+          package-name: ${{ inputs.package_name }}
+          version-override: ${{ inputs.version }}
+
       - name: Calculate artifact names
         id: names
         uses: CLDMV/.github/.github/actions/common/steps/calculate-names@v1
         with:
           node-version: ${{ inputs.node_version }}
           package-name: ${{ inputs.package_name }}
-          version: ${{ inputs.version }}
+          version: ${{ steps.extract-version.outputs.version }}
 
       - name: Publish to GitHub Packages
         id: publish
         uses: CLDMV/.github/.github/actions/npm/jobs/publish-github-packages@v1
         with:
           package-name: ${{ inputs.package_name }}
-          version: ${{ inputs.version }}
+          version: ${{ steps.extract-version.outputs.version }}
           node-version: ${{ inputs.node_version }}
           package-manager: ${{ inputs.package_manager }}
           publish-command: ${{ inputs.publish_command_github_packages }}
